fixed bug where items were misaligned

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -87,7 +87,7 @@
     flex:1;
     display: flex;
     flex-direction: row;
-    max-width: 70%;
+    width: 70%;
     justify-content: center;
     align-items: center;
     padding-bottom: 24px;
